# sailvue

./: .gitignore  .gitmodules  CMakeLists.txt  FIXME  InstrDataReader.h  README.md  TODO  main.cpp  make-package.sh
.github/workflows/: cmake-single-platform.yml
Insta360/: Insta360.cpp  Insta360.h
adobe_premiere/: ClipMarker.cpp  ClipMarker.h  MarkerReader.cpp  MarkerReader.h  README.md
adobe_premiere/extensions/SailvuePanel/: .debug  ReadMe.md  ext.js  index.html
adobe_premiere/extensions/SailvuePanel/CSXS/: manifest.xml
adobe_premiere/extensions/SailvuePanel/jsx/PPRO/: Premiere.jsx
adobe_premiere/extensions/SailvuePanel/payloads/: onbeforeunload.html
adobe_premiere/insta360/: MarkerReaderInsta360.cpp  MarkerReaderInsta360.h
cameras/: CameraBase.cpp  CameraBase.h
data/: pgn-src.csv
ffmpeg/: FFMpeg.cpp  FFMpeg.h  test_cmd.sh
gopro/: GoPro.cpp  GoPro.h
gui/: ChapterEditor.qml  ChapterMaker.cpp  ChapterMaker.h  ChapterMapElement.qml  ChapterTypes.h  GoProMediaPlayer.cpp  GoProMediaPlayer.h  InputDataDialog.qml  Options.qml  PGNSources.qml  PgnSrcTreeModel.cpp  PgnSrcTreeModel.h  Project.cpp  Project.h  RaceEditor.qml  RaceMap.qml  RaceTimeLine.qml  RaceTreeModel.cpp  RaceTreeModel.h  RaceTreeView.qml  RaceVideo.qml  Settings.h  Worker.cpp  Worker.h  main.qml
images/: Logos.icns
magnetic/: GeomagnetismLibrary.c  README.md  mem_file.c  mem_file.h  wmm-2020.h  wmm.c  wmm.h
movie/: ColorPalette.h  InstrOverlayMaker.cpp  InstrOverlayMaker.h  MovieProducer.cpp  MovieProducer.h  OverlayElement.cpp  OverlayElement.h  OverlayMaker.cpp  OverlayMaker.h  PerformanceOverlayMaker.cpp  PerformanceOverlayMaker.h  PolarOverlayMaker.cpp  PolarOverlayMaker.h  RudderOverlayMaker.cpp  RudderOverlayMaker.h  StartTimerOverlayMaker.cpp  StartTimerOverlayMaker.h  TargetsOverlayMaker.cpp  TargetsOverlayMaker.h
n2k/: ExpeditionReader.cpp  ExpeditionReader.h  InitCanBoat.c  InitCanBoat.h  InstrumentInput.h  YdvrReader.cpp  YdvrReader.h
n2k/geo/: Angle.h  Direction.h  Distance.h  GeoLoc.h  Quantity.cpp  Quantity.h  Speed.h  UtcTime.h
navcomputer/: Calibration.cpp  Calibration.h  Chapter.cpp  Chapter.h  IProgressListener.h  InstrumentInput.h  NavStats.cpp  NavStats.h  NavStatsEventsListener.h  Performance.h  Polars.cpp  Polars.h  RaceData.cpp  RaceData.h  TimeDeltaComputer.cpp  TimeDeltaComputer.h
net_sim/: N2kDebugStream.cpp  N2kDebugStream.h  NMEA2000_UDP.cpp  NMEA2000_UDP.h  NetworkSimulator.cpp  NetworkSimulator.h
scripts/: plot_instr.py
test/: CMakeLists.txt  test_adobe_markers.cpp  test_median.cpp  test_n2k.cpp  test_overlays.cpp  test_polars.cpp
test/data/: ii.csv  polars-javelin.pol  polars.txt
test/data/02-MARKERS/: VID_20240527_111740_00_002.insv.csv  VID_20240527_111740_00_003.insv.csv
utils/: Caffeine.cpp  Caffeine.h
voiceover/elevenlabs/: make_voiceover.py
voiceover/elevenlabs/args/: 3bf.txt  drakes-bay-1.txt  gybe-practice.txt  practice-code0.txt  yra-dh-mw-3.txt
ydn2csv/: main.cpp
